little change to avoid seeing the first input jumping when going from contact page to that input page

--- a/src/pages/contact/show.css
+++ b/src/pages/contact/show.css
@@ -23,9 +23,9 @@
     }
 }
 
-.ladder {
+/* .ladder {
     transform: perspective(500px);
-}
+} */
 .ladderAnim {
     animation: ladder 1s ease-in-out 1;
     opacity: 1;
